TASK_02_Portfolio-website/assets/css/style.css
/* ... */
h2{
    font-weight: 800;
}
.heading{
    text-align: center;
    margin-bottom: 1rem;
}
.info{
    display: flex;
    flex-wrap: wrap;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1rem;
}
.text-wrap{
    width: 65%;
    padding: 0 1.5rem;
    text-align: justify;
}
.highlight{
    color: var(--highlight);
}
.features{
    color: var(--features);
}
.details{
    color: var(--light);
    border-radius: 5px;
    overflow: hidden;
    width: 30%;
    overflow: hidden;
    background-color: var(--over-dark);
}
.d-text{
    position: relative;
    padding: 1.3rem;
    z-index: 2;
}
.details img{
    z-index: -1;
    position: absolute;
    width: 500px;
    left: 0;
    top: 0;
    mix-blend-mode: lighten;
    filter: blur(1.5px);
    opacity: 0.15;
}
.details h1{
    margin-bottom: 1.5rem;
    font-weight: 400;
}
.details p{
    display: flex;
    align-items: center;
    margin-bottom: 0.6rem;
}
.details i{
    font-size: 1.2rem;
}

 /* Education */
.education-wrap{
    max-width: 1200px;
    padding: 2rem 3.5rem;
    margin: 0 auto;
    /* margin-bottom: 2rem; */
}
.education-details{
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    row-gap: 1rem;
    overflow-wrap: break-word;
}
.EQ-Head{
    width: 100%;
    background-color: rgba(135, 135, 135, 0.2);
    /* color: var(--dark); */
    padding: 0.5rem;
}
.status{
    margin-top: 0.2rem;
    /* padding: 0.2rem; */
}
.passed{
    color: var(--green);
}
.pursuing{
    color: var(--highlight);
}
.qualification, .board, .session{
    padding: 1rem;
}


 /* Task sec */
.task-sec{
    padding: 2rem 3.5rem;
    text-align: center;
    position: relative;
    background: rgb(2,0,36);
    background: linear-gradient(54deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 38%, rgba(22,115,134,1) 100%);
    color: var(--light);
    object-fit: cover;
    background-repeat: no-repeat;
}
.task-sec-img{
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    background-image: url(../img/projects-bg.webp);
    mix-blend-mode: overlay;
    opacity: 0.25;
    filter: blur(3px);
}
.task-sec-wrap{
    width: 100%;
    overflow: hidden;
    position: relative;
    z-index: 10;
}
.task-heading{
    margin-bottom: 0.5rem;
}
.task-sub-heading{
    margin-bottom: 1.2rem;
}
.task-list{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: stretch;
    gap: 1rem;
}
.task{
    width: 21.875rem;
    flex: 1;
    height: 100%;
    background-color: var(--over-dark);
    /* border: 0.1px solid #3d3d3e; */
    color: var(--light);
    border-radius: 5px;
    overflow: hidden;
    box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
}
.preview{
    object-fit: contain;
    background-size: cover;
    overflow: hidden;
}
.preview-img{
    aspect-ratio: 16/9;
    width: max(350px);
}
.task:hover{
    cursor: pointer;
}
.task:hover > .preview > .preview-img{
    transform: scale(1.1);
    transition: 1s ease;
}
.task-title{
    color: var(--highlight);
}
.task-desc{
    font-weight: 100;
    font-size: 0.8rem;
    line-height: 1.5;
}
.desc{
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 2rem;
}
.task-date{
    margin-top: 0.5rem;
    color: #78788c;
    font-size: 0.9rem;
}

.used-technology{
    display: flex;
    width: 100%;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 10px;
    font-size: 1.3rem;
}
.used-tools{
    font-size: 0.8rem;
    color: var(--features);
}

/* .experience */

.experience-wrap{
    padding: 3rem 1rem;
}
.ex-item{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: start;
    gap: 2rem;
    margin-top: 2rem;
}
.ex-item-details{
    max-width: 500px;
}
.ex-item-details hr{
    border-color: rgba(135, 135, 135, 0.2);
    margin: 0.6rem 0;
}
.ex-item-no{
    font-weight: 900;
    font-size: 5rem;
    color: rgba(135, 135, 135, 0.2);
}
.ex-desc{
    font-size: 0.95rem;
    text-align: justify;
}
.ex-desc span{
    color: rgba(0, 0, 0, 0.4);
}

/* skills */
.skill-heading{
    margin-bottom: 2rem;
}
.skills-wrap{
    padding: 3rem 1rem;
}
.skills{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
    gap: 2rem;
    padding: 1rem;
}

/* Responsive */

@media(max-width:360px){
    .task{
        width: 15rem;
    }
    .preview-img{
        margin: 0 auto;
        width: 15rem;
    }
    .task-date{
        color: #78788c;
        font-size: 0.9rem;
    }
    .duration{
        font-size: 0.75rem;
    }
  }
/* ... */

